--- a/rules.html
+++ b/rules.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="JokerLudo WhatsApp group rules – fair play, no cheating, and active participation only.">
-  <meta name="keywords" content="jokerludo, group rules, ludo rules, whatsapp ludo">
-  <meta name="author" content="JokerLudo Group">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Read JokerLudo rules and guidelines before joining or creating Ludo WhatsApp groups.">
+  <meta name="keywords" content="jokerludo rules, ludo game rules, whatsapp group rules">
+  <meta name="author" content="JokerLudo">
 
-  <meta property="og:title" content="Group Rules – JokerLudo" />
-  <meta property="og:description" content="Read the official JokerLudo rules before joining a group to ensure fair gameplay." />
+  <meta property="og:title" content="Rules – JokerLudo" />
+  <meta property="og:description" content="Make sure to read these important rules before joining a JokerLudo group." />
   <meta property="og:url" content="https://ludogrouplink.com/rules.html" />
   <meta property="og:type" content="website" />
 
-  <title>Group Rules – JokerLudo</title>
+  <title>JokerLudo Rules & Guidelines</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -32,8 +32,7 @@
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f5ff;
-      color: #333;
+      background-color: #f1f3f6;
     }
 
     .navbar {
@@ -56,7 +55,6 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
-      margin-bottom: 10px;
     }
 
     .nav-links a {
@@ -74,18 +72,18 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 800px;
       margin: 40px auto;
-      padding: 20px;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 25px;
       color: #2d2e52;
+      margin-bottom: 30px;
     }
 
     ul {
@@ -93,8 +91,15 @@
     }
 
     li {
-      margin-bottom: 12px;
+      margin-bottom: 15px;
       line-height: 1.6;
+      font-size: 16px;
+      color: #333;
+    }
+
+    .important {
+      color: #c0392b;
+      font-weight: bold;
     }
 
     footer {
@@ -141,18 +146,17 @@
   </nav>
 
   <div class="container">
-    <h2>📋 JokerLudo Group Rules</h2>
+    <h2>📘 JokerLudo Rules & Guidelines</h2>
     <ul>
-      <li><strong>No Cheating:</strong> Strictly no use of mods, hacks, or unfair tactics. Offenders will be removed instantly.</li>
-      <li><strong>Respect All Players:</strong> Offensive language, bullying, or personal attacks are not tolerated.</li>
-      <li><strong>Payment Time:</strong> If playing with money, winners must be paid within 15 minutes after the match ends.</li>
-      <li><strong>Screenshot Proof:</strong> Always upload match result screenshots for transparency.</li>
-      <li><strong>Only Active Players:</strong> Inactive members will be removed after 2 days of no activity.</li>
-      <li><strong>Admin Decision Final:</strong> Group admin has full rights to remove or block users if rules are broken.</li>
-      <li><strong>No Spam:</strong> Don’t post irrelevant links or promotions unless allowed by the admin.</li>
-      <li><strong>One Account Per Person:</strong> Multiple accounts for cheating will be banned.</li>
+      <li><span class="important">✅ Only real players</span> are allowed. No fake or spammy accounts.</li>
+      <li><span class="important">✅ Respect</span> all group members. No abuse or offensive language.</li>
+      <li><span class="important">✅ No cheating:</span> Strict action will be taken against unfair gameplay.</li>
+      <li><span class="important">✅ Timely payments:</span> If the group involves paid matches, winners must be paid instantly.</li>
+      <li><span class="important">✅ Admin has final authority</span> to remove any member violating the rules.</li>
+      <li><span class="important">🚫 No promotion</span> of other games or links unless approved by admin.</li>
+      <li><span class="important">🕵️ Joker ID misuse</span> will result in a permanent ban.</li>
+      <li><span class="important">🎮 Play fair, play smart.</span> Let everyone enjoy the game!</li>
     </ul>
-    <p>✅ By joining any JokerLudo group, you agree to follow these rules. Let's keep the community fair and fun!</p>
   </div>
 
   <footer>
