--- a/join.html
+++ b/join.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Join active JokerLudo WhatsApp groups for competitive Ludo matches and tournaments.">
-  <meta name="keywords" content="ludo group join, whatsapp ludo group, jokerludo join link">
-  <meta name="author" content="JokerLudo Group">
-  
-  <meta property="og:title" content="Join Ludo Groups – JokerLudo" />
-  <meta property="og:description" content="Join our verified and active JokerLudo WhatsApp groups for daily Ludo challenges." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Join active JokerLudo WhatsApp groups and start playing real money ludo games.">
+  <meta name="keywords" content="jokerludo whatsapp group, ludo join group, real money ludo groups">
+  <meta name="author" content="JokerLudo">
+
+  <meta property="og:title" content="Join WhatsApp Groups – JokerLudo" />
+  <meta property="og:description" content="Click to join JokerLudo WhatsApp groups and start playing real ludo games now!" />
   <meta property="og:url" content="https://ludogrouplink.com/join.html" />
   <meta property="og:type" content="website" />
 
@@ -32,7 +32,7 @@
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9faff;
+      background: #f5f7fa;
     }
 
     .navbar {
@@ -72,35 +72,49 @@
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 20px;
     }
 
+    h2 {
+      text-align: center;
+      color: #2d2e52;
+      margin-bottom: 30px;
+    }
+
     .group-card {
-      background: #fff;
+      background: #ffffff;
+      border: 1px solid #ddd;
       border-radius: 12px;
-      padding: 25px;
+      padding: 20px;
       margin-bottom: 20px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.05);
+      transition: transform 0.2s;
+    }
+
+    .group-card:hover {
+      transform: translateY(-3px);
     }
 
     .group-card h3 {
-      margin-top: 0;
+      margin: 0 0 10px;
       color: #2d2e52;
     }
 
     .group-card p {
-      margin: 10px 0;
+      margin: 5px 0 15px;
+      color: #555;
     }
 
     .join-btn {
       display: inline-block;
       background: #2d2e52;
       color: #fff;
-      padding: 10px 18px;
-      border-radius: 8px;
+      padding: 10px 20px;
+      border-radius: 6px;
       text-decoration: none;
+      font-weight: 600;
       transition: background 0.3s;
     }
 
@@ -115,7 +129,7 @@
       padding: 15px 10px;
       text-align: center;
       font-size: 14px;
-      margin-top: 40px;
+      margin-top: 50px;
     }
 
     .footer-links {
@@ -153,31 +167,27 @@
   </nav>
 
   <div class="container">
-    <h2 style="text-align:center; color:#2d2e52;">🚀 Join Active JokerLudo WhatsApp Groups</h2>
+    <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
 
-    <!-- Group Example -->
     <div class="group-card">
-      <h3>♟ JokerLudo Champions Group</h3>
-      <p><strong>Type:</strong> Competitive Matches & Daily Rewards</p>
-      <p><strong>Status:</strong> ✅ Active</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP1" target="_blank" class="join-btn">Join Group</a>
+      <h3>💥 Joker Ludo Group 1</h3>
+      <p>Real cash games | Instant payment | Fair play</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP1" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
-      <h3>🔥 JokerLudo 24x7 Battles</h3>
-      <p><strong>Type:</strong> 24/7 Open Lobbies & Casual Matches</p>
-      <p><strong>Status:</strong> ✅ Active</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP2" target="_blank" class="join-btn">Join Group</a>
+      <h3>💥 Joker Ludo Group 2</h3>
+      <p>Daily matches | Trusted admin | No cheating</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP2" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
-      <h3>💸 JokerLudo Paid Tournament Room</h3>
-      <p><strong>Type:</strong> Paid Entry • Cash Prizes</p>
-      <p><strong>Status:</strong> ✅ Limited Seats</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP3" target="_blank" class="join-btn">Join Group</a>
+      <h3>💥 Joker Ludo Group 3</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP3" class="join-btn" target="_blank">Join Now</a>
     </div>
 
-    <!-- Add more groups as needed -->
+    <!-- Add more group-card blocks as needed -->
   </div>
 
   <footer>
