--- a/privacy.html
+++ b/privacy.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Privacy Policy for JokerLudo. Learn how your information is collected and protected.">
-  <meta name="keywords" content="privacy, policy, JokerLudo, data protection">
-  <meta name="author" content="JokerLudo Group">
+  <meta name="description" content="Privacy policy for JokerLudo – your trust and data privacy matter to us.">
+  <meta name="author" content="JokerLudo">
 
   <meta property="og:title" content="Privacy Policy – JokerLudo" />
-  <meta property="og:description" content="Read JokerLudo's privacy policy and how your data is handled." />
+  <meta property="og:description" content="We value your privacy. Learn how JokerLudo collects and uses data." />
   <meta property="og:url" content="https://ludogrouplink.com/privacy.html" />
   <meta property="og:type" content="website" />
 
   <title>Privacy Policy – JokerLudo</title>
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
@@ -26,13 +25,12 @@
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- Styles -->
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f5ff;
+      background-color: #f5f7fa;
       color: #333;
     }
 
@@ -43,12 +41,12 @@
     }
 
     .logo {
-      font-size: 34px;
+      font-size: 30px;
       font-weight: 700;
       color: #fff;
-      margin-bottom: 15px;
-      display: block;
       text-decoration: none;
+      display: block;
+      margin-bottom: 10px;
     }
 
     .nav-links {
@@ -56,7 +54,6 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
-      margin-bottom: 10px;
     }
 
     .nav-links a {
@@ -78,19 +75,24 @@
       margin: 40px auto;
       padding: 20px;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.05);
+    }
+
+    h1 {
+      color: #2d2e52;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
     h2 {
-      text-align: center;
-      margin-bottom: 25px;
       color: #2d2e52;
+      margin-top: 30px;
     }
 
     p {
-      line-height: 1.6;
-      margin-bottom: 15px;
+      line-height: 1.8;
+      margin-bottom: 20px;
     }
 
     footer {
@@ -99,7 +101,7 @@
       padding: 15px 10px;
       text-align: center;
       font-size: 14px;
-      margin-top: 40px;
+      margin-top: 50px;
     }
 
     .footer-links {
@@ -137,30 +139,32 @@
   </nav>
 
   <div class="container">
-    <h2>🔒 Privacy Policy</h2>
+    <h1>Privacy Policy</h1>
 
-    <p>At JokerLudo (https://ludogrouplink.com), your privacy is important to us. This Privacy Policy outlines what personal information is collected and how it is used.</p>
+    <p>Welcome to <strong>JokerLudo</strong> (ludogrouplink.com). Your privacy is important to us. This Privacy Policy outlines the types of information we may collect and how we use, store, and protect it.</p>
 
-    <h3>Information We Collect</h3>
-    <p>We may collect your name and email address if you choose to contact us through our form. We do not collect any sensitive personal data.</p>
+    <h2>1. Information We Collect</h2>
+    <p>We may collect basic personal information like name and email address when you submit a group or contact us. We also use Google Analytics to collect anonymous usage data such as pages visited and time spent on site.</p>
 
-    <h3>How We Use Information</h3>
-    <p>Your data is used solely for communication purposes – we do not share, sell, or rent your information to third parties.</p>
+    <h2>2. How We Use Your Data</h2>
+    <p>We use your data to:</p>
+    <ul>
+      <li>Improve our website experience</li>
+      <li>Contact you if you submit your group or request support</li>
+      <li>Analyze user trends through Google Analytics</li>
+    </ul>
 
-    <h3>Cookies</h3>
-    <p>This website may use cookies for analytics and improving your experience. You can disable cookies in your browser settings.</p>
+    <h2>3. Third-Party Tools</h2>
+    <p>We use third-party services like Google Analytics and WhatsApp links. These platforms may collect data as per their privacy policies. We do not sell your data to any third party.</p>
 
-    <h3>Third-Party Services</h3>
-    <p>We use Google Analytics to track anonymous usage data to improve site performance. This data is never linked to your personal identity.</p>
+    <h2>4. Cookies</h2>
+    <p>We use cookies to improve website functionality and analyze traffic. You can disable cookies via your browser settings.</p>
 
-    <h3>Data Security</h3>
-    <p>We take all necessary steps to protect your data. However, no method of transmission over the Internet is 100% secure.</p>
+    <h2>5. Contact</h2>
+    <p>If you have any questions regarding our privacy policy, please contact us via the <a href="contact.html">contact page</a>.</p>
 
-    <h3>Changes to This Policy</h3>
-    <p>We may update this policy from time to time. Please revisit this page for the latest information.</p>
-
-    <h3>Contact Us</h3>
-    <p>If you have any questions about this Privacy Policy, feel free to <a href="contact.html">contact us</a>.</p>
+    <h2>6. Updates</h2>
+    <p>We may update this Privacy Policy periodically. Please check this page regularly to stay informed.</p>
   </div>
 
   <footer>
@@ -169,8 +173,8 @@
       <a href="rules.html">Rules</a>
       <a href="join.html">Join</a>
       <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
     </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
