--- a/join.html
+++ b/join.html
@@ -172,19 +172,19 @@
     <div class="group-card">
       <h3>💥 Joker Ludo Group 1</h3>
       <p>Real cash games | Instant payment | Fair play</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP1" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
       <h3>💥 Joker Ludo Group 2</h3>
       <p>Daily matches | Trusted admin | No cheating</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP2" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
       <h3>💥 Joker Ludo Group 3</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://chat.whatsapp.com/EXAMPLEGROUP3" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <!-- Add more group-card blocks as needed -->
