--- a/addgroup.html
+++ b/addgroup.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Submit your JokerLudo WhatsApp group to get listed on our platform.">
-  <meta name="keywords" content="add ludo group, submit whatsapp group, jokerludo group form">
-  <meta name="author" content="JokerLudo Group">
+  <meta name="description" content="Add your WhatsApp Joker Ludo Group for free. Submit and get listed after admin approval."/>
+  <meta name="author" content="JokerLudo" />
 
-  <meta property="og:title" content="Add Group – JokerLudo" />
-  <meta property="og:description" content="Submit your Ludo WhatsApp group and get featured on JokerLudo." />
-  <meta property="og:url" content="https://ludogrouplink.com/addgroup.html" />
-  <meta property="og:type" content="website" />
-
-  <title>Add Your Ludo Group – JokerLudo</title>
+  <title>Add Group – JokerLudo</title>
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
@@ -26,34 +20,33 @@
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- Styles -->
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f1f3f6;
+      background-color: #f5f5f5;
+      color: #333;
     }
 
     .navbar {
       background: #2d2e52;
-      padding: 25px 20px 10px;
+      padding: 20px;
       text-align: center;
     }
 
     .logo {
-      font-size: 34px;
+      font-size: 30px;
       font-weight: 700;
       color: #fff;
-      margin-bottom: 15px;
-      display: block;
       text-decoration: none;
+      display: block;
     }
 
     .nav-links {
+      margin-top: 10px;
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
       gap: 15px;
     }
 
@@ -61,7 +54,7 @@
       color: #fff;
       text-decoration: none;
       font-weight: 500;
-      padding: 8px 14px;
+      padding: 8px 12px;
       border-radius: 5px;
       transition: background 0.3s;
     }
@@ -72,85 +65,94 @@
     }
 
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 40px auto;
+      padding: 20px;
       background: #fff;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
-    h2 {
+    h1 {
       text-align: center;
       color: #2d2e52;
-    }
-
-    form {
-      margin-top: 20px;
+      margin-bottom: 20px;
     }
 
     label {
       display: block;
-      margin-bottom: 6px;
-      font-weight: 500;
+      margin-bottom: 5px;
+      font-weight: 600;
     }
 
     input, textarea {
       width: 100%;
       padding: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-
-    button {
-      background: #2d2e52;
-      color: white;
-      padding: 12px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #ffde59;
-      color: #2d2e52;
     }
 
     .note {
-      font-size: 14px;
-      color: #666;
-      text-align: center;
-      margin-top: -10px;
+      background: #fffae6;
+      padding: 15px;
+      border-left: 5px solid #ffbf00;
       margin-bottom: 20px;
+      font-size: 15px;
+    }
+
+    .group-list {
+      margin-top: 30px;
+    }
+
+    .group-list h2 {
+      margin-bottom: 15px;
+      color: #2d2e52;
+    }
+
+    .group-box {
+      padding: 10px;
+      background: #f1f1f1;
+      border-left: 4px solid #2d2e52;
+      margin-bottom: 10px;
+    }
+
+    .submit-button {
+      background: #2d2e52;
+      color: white;
+      padding: 12px 18px;
+      font-size: 16px;
+      font-weight: 600;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      display: block;
+      margin: 0 auto;
+      transition: background 0.3s;
+    }
+
+    .submit-button:hover {
+      background: #ffde59;
+      color: #2d2e52;
     }
 
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 15px 10px;
+      padding: 15px;
       text-align: center;
       font-size: 14px;
       margin-top: 40px;
     }
 
     .footer-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
       margin-bottom: 8px;
     }
 
     .footer-links a {
+      margin: 0 10px;
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
     }
 
     .footer-links a:hover {
@@ -173,27 +175,36 @@
   </nav>
 
   <div class="container">
-    <h2>📨 Submit Your Ludo Group</h2>
-    <p class="note">We’ll review your group and list it within 24 hours if approved.</p>
+    <h1>Add Your Ludo WhatsApp Group</h1>
+    <div class="note">
+      📢 <strong>Note:</strong> All group submissions are free. However, they will only be published **after admin approval**. <br>
+      ➡️ After submitting, your message will be sent directly to the admin on WhatsApp. <br>
+      ✅ No charges at all.
+    </div>
 
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-      <label for="name">Your Name</label>
-      <input type="text" name="name" id="name" required>
+    <form id="groupForm">
+      <label for="name">Group Name</label>
+      <input type="text" id="name" placeholder="Example: Joker Ludo Zone" required>
 
-      <label for="groupname">Group Name</label>
-      <input type="text" name="groupname" id="groupname" required>
+      <label for="link">Group Link</label>
+      <input type="url" id="link" placeholder="Example: https://chat.whatsapp.com/XXXXXXXXXX" required>
 
-      <label for="link">WhatsApp Group Link</label>
-      <input type="url" name="link" id="link" placeholder="https://chat.whatsapp.com/..." required>
-
-      <label for="type">Group Type</label>
-      <input type="text" name="type" id="type" placeholder="e.g., Paid Matches, Casual, Tournaments" required>
-
-      <label for="message">Additional Info</label>
-      <textarea name="message" id="message" rows="4"></textarea>
-
-      <button type="submit">Submit Group</button>
+      <button type="submit" class="submit-button">📩 Submit to Admin</button>
     </form>
+
+    <div class="group-list">
+      <h2>Popular Groups You Can Join</h2>
+      <div class="group-box"><strong>Group 1:</strong> Joker Kings – <a href="#">https://chat.whatsapp.com/abc123</a></div>
+      <div class="group-box"><strong>Group 2:</strong> Ludo Master Arena – <a href="#">https://chat.whatsapp.com/def456</a></div>
+      <div class="group-box"><strong>Group 3:</strong> Joker Night War – <a href="#">https://chat.whatsapp.com/ghi789</a></div>
+      <div class="group-box"><strong>Group 4:</strong> Royal Ludo Club – <a href="#">https://chat.whatsapp.com/jkl123</a></div>
+      <div class="group-box"><strong>Group 5:</strong> Daily Ludo Battle – <a href="#">https://chat.whatsapp.com/mno456</a></div>
+      <div class="group-box"><strong>Group 6:</strong> Joker Superstars – <a href="#">https://chat.whatsapp.com/pqr789</a></div>
+      <div class="group-box"><strong>Group 7:</strong> Joker Army – <a href="#">https://chat.whatsapp.com/uvw123</a></div>
+      <div class="group-box"><strong>Group 8:</strong> Classic Ludo Team – <a href="#">https://chat.whatsapp.com/xyz456</a></div>
+      <div class="group-box"><strong>Group 9:</strong> Joker Fire Group – <a href="#">https://chat.whatsapp.com/yza123</a></div>
+      <div class="group-box"><strong>Group 10:</strong> Champion Ludo Pro – <a href="#">https://chat.whatsapp.com/cde456</a></div>
+    </div>
   </div>
 
   <footer>
@@ -202,11 +213,23 @@
       <a href="rules.html">Rules</a>
       <a href="join.html">Join</a>
       <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
     </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
+
+  <script>
+    document.getElementById("groupForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const link = document.getElementById("link").value.trim();
+      const message = `Hello Admin,%0A%0AI would like to add my Ludo group to the site.%0A%0A📛 Group Name: ${encodeURIComponent(name)}%0A🔗 Group Link: ${encodeURIComponent(link)}%0A%0AThank you!`;
+      const phone = "9473746020";
+      const whatsappURL = `https://wa.me/${phone}?text=${message}`;
+      window.open(whatsappURL, '_blank');
+    });
+  </script>
 
 </body>
 </html>
