--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta Tags -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact JokerLudo Group – Reach out for support, queries, or to promote your Ludo group.">
-  <meta name="keywords" content="Contact JokerLudo, JokerLudo Support, Ludo WhatsApp Group Help">
-  <meta name="author" content="JokerLudo Group">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Contact Joker Ludo team for any query or support."/>
+  <meta name="author" content="JokerLudo" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Contact JokerLudo – Get Support or Add Your Group" />
-  <meta property="og:description" content="Need help or want to list your Ludo group? Contact JokerLudo now!" />
-  <meta property="og:url" content="https://ludogrouplink.com/contact.html" />
-  <meta property="og:type" content="website" />
-
-  <!-- Title -->
-  <title>Contact JokerLudo – Support & Group Submission</title>
+  <title>Contact Us – JokerLudo</title>
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
@@ -29,44 +20,41 @@
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- Styles -->
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f5ff;
+      background-color: #f5f5f5;
       color: #333;
     }
 
     .navbar {
       background: #2d2e52;
-      padding: 25px 20px 10px;
+      padding: 20px;
       text-align: center;
     }
 
     .logo {
-      font-size: 34px;
+      font-size: 30px;
       font-weight: 700;
       color: #fff;
-      margin-bottom: 15px;
-      display: block;
       text-decoration: none;
+      display: block;
     }
 
     .nav-links {
+      margin-top: 10px;
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
       gap: 15px;
-      margin-bottom: 10px;
     }
 
     .nav-links a {
       color: #fff;
       text-decoration: none;
       font-weight: 500;
-      padding: 8px 14px;
+      padding: 8px 12px;
       border-radius: 5px;
       transition: background 0.3s;
     }
@@ -77,87 +65,92 @@
     }
 
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 40px auto;
       padding: 20px;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
-    h2 {
+    h1 {
       text-align: center;
-      margin-bottom: 20px;
       color: #2d2e52;
+      margin-bottom: 20px;
     }
 
-    form label {
+    p {
+      text-align: center;
+      font-size: 16px;
+      margin-bottom: 30px;
+    }
+
+    label {
       display: block;
-      margin-top: 15px;
-      font-weight: 500;
+      margin-bottom: 5px;
+      font-weight: 600;
     }
 
     input, textarea {
       width: 100%;
-      padding: 12px;
-      margin-top: 5px;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
     }
 
-    button {
+    .submit-button {
       background: #2d2e52;
-      color: #fff;
-      padding: 12px 20px;
+      color: white;
+      padding: 12px 18px;
+      font-size: 16px;
+      font-weight: 600;
       border: none;
-      border-radius: 8px;
+      border-radius: 5px;
       cursor: pointer;
+      display: block;
+      margin: 0 auto;
+      transition: background 0.3s;
+    }
+
+    .submit-button:hover {
+      background: #ffde59;
+      color: #2d2e52;
+    }
+
+    .email-info {
+      text-align: center;
       margin-top: 20px;
       font-size: 16px;
-      width: 100%;
     }
 
-    button:hover {
-      background: #1a1a3a;
+    .email-info a {
+      color: #2d2e52;
+      font-weight: bold;
+      text-decoration: none;
     }
 
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 15px 10px;
+      padding: 15px;
       text-align: center;
       font-size: 14px;
       margin-top: 40px;
     }
 
     .footer-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
       margin-bottom: 8px;
     }
 
     .footer-links a {
+      margin: 0 10px;
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
     }
 
     .footer-links a:hover {
       color: #ffde59;
-    }
-
-    @media (max-width: 768px) {
-      .nav-links {
-        gap: 10px;
-      }
-
-      .container {
-        margin: 20px;
-      }
     }
   </style>
 </head>
@@ -176,21 +169,25 @@
   </nav>
 
   <div class="container">
-    <h2>📞 Contact Us</h2>
-    <p style="text-align: center;">Have a question, feedback, or want to list your group? Reach out now!</p>
+    <h1>Contact Us</h1>
+    <p>If you have any questions, group issues, or suggestions, feel free to reach out. You can contact us via WhatsApp or email. We’ll respond as quickly as possible.</p>
 
-    <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
-      <label for="name">Name *</label>
-      <input type="text" id="name" name="name" required>
+    <form id="contactForm">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required>
 
-      <label for="email">Email *</label>
-      <input type="email" id="email" name="email" required>
+      <label for="email">Your Email</label>
+      <input type="email" id="email" placeholder="Enter your email" required>
 
-      <label for="message">Message *</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      <label for="message">Your Message</label>
+      <textarea id="message" rows="5" placeholder="Write your query..." required></textarea>
 
-      <button type="submit">Send Message</button>
+      <button type="submit" class="submit-button">📩 Send via WhatsApp</button>
     </form>
+
+    <div class="email-info">
+      Or email us at: <a href="mailto:jokerludohub1431@gmail.com">jokerludohub1431@gmail.com</a>
+    </div>
   </div>
 
   <footer>
@@ -199,11 +196,25 @@
       <a href="rules.html">Rules</a>
       <a href="join.html">Join</a>
       <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
     </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
+
+  <script>
+    document.getElementById("contactForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const message = document.getElementById("message").value.trim();
+
+      const finalMsg = `Hello Admin,%0A%0AI have a query regarding JokerLudo.%0A%0A👤 Name: ${encodeURIComponent(name)}%0A📧 Email: ${encodeURIComponent(email)}%0A📝 Message: ${encodeURIComponent(message)}%0A%0AThanks.`;
+      const phone = "9473746020";
+      const whatsappURL = `https://wa.me/${phone}?text=${finalMsg}`;
+      window.open(whatsappURL, '_blank');
+    });
+  </script>
 
 </body>
 </html>
