--- a/index.html
+++ b/index.html
@@ -1,40 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Join JokerLudo – India’s #1 Trusted Ludo Earning Group. Quick withdrawals, verified groups, 24x7 support!">
-  <meta name="keywords" content="Ludo Earning, JokerLudo, Ludo WhatsApp Group, Win Real Money, LudoStar, FastWin Ludo">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Best Ludo WhatsApp Group Links | Trusted Joker Ludo Groups 2025</title>
+  <meta name="description" content="Join trusted Ludo WhatsApp groups. Add your own group for free. JokerLudo gives 100% genuine earning groups. Join daily active Ludo players now.">
+  <meta name="keywords" content="Ludo WhatsApp group, Ludo group link, Joker Ludo group, join Ludo group, earning Ludo group, Ludo game WhatsApp link">
+  <meta name="robots" content="index, follow">
   <meta name="author" content="JokerLudo Group">
-
-  <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="JokerLudo Group – Trusted Ludo Earning Platform" />
-  <meta property="og:description" content="Make Your Luck with JokerLudo – Join now & earn real cash from Ludo!" />
-  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
-  <meta property="og:url" content="https://ludogrouplink.com" />
-  <meta property="og:type" content="website" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
-  <!-- Title -->
-  <title>JokerLudo Group – Trusted Ludo Earning WhatsApp Groups</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
-
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-EZF7SRX6EJ');
-  </script>
-
+  <link rel="canonical" href="https://ludogrouplink.com/" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    /* Your CSS remains unchanged from the last version */
     * {
       margin: 0;
       padding: 0;
@@ -203,8 +179,8 @@
   <section class="hero">
     <h1>Welcome to JokerLudo Group! 🎉</h1>
     <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now Joker ludo group</a> <br><br>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group Link</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a> <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
   </section>
 
   <section class="features">
@@ -223,7 +199,7 @@
   </section>
 
   <section class="features">
-    <h2 style="text-align:center; width:100%; margin-bottom:20px;">🔥 Approved Groups</h2>
+    <h2 style="text-align:center; width:100%; margin-bottom:20px;">🔥 Approved Ludo WhatsApp Groups</h2>
 
     <div class="card">
       <h3>🔥 LudoStar Group</h3>
@@ -236,6 +212,8 @@
       <p>Guaranteed fast payments!</p>
       <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
     </div>
+
+    <!-- Add more group cards as needed -->
   </section>
 
   <footer>
