--- a/index.html
+++ b/index.html
@@ -2,81 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Best Ludo WhatsApp Group Links | Trusted Joker Ludo Groups 2025</title>
-  <meta name="description" content="Join trusted Ludo WhatsApp groups. Add your own group for free. JokerLudo gives 100% genuine earning groups. Join daily active Ludo players now.">
-  <meta name="keywords" content="Ludo WhatsApp group, Ludo group link, Joker Ludo group, join Ludo group, earning Ludo group, Ludo game WhatsApp link">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="JokerLudo Group">
-  <link rel="canonical" href="https://ludogrouplink.com/" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Best Ludo WhatsApp Group Links | JokerLudo Group</title>
+  <meta name="description" content="Join India’s most trusted and genuine Ludo earning WhatsApp groups. Daily matches, instant payout. JokerLudo Group - verified Ludo groups." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group" />
+  <meta name="author" content="JokerLudo Group" />
+  <meta name="robots" content="index, follow" />
 
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
+  <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding!" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="JokerLudo" />
+  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/images/logo.png",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
+  }
+  </script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
       background: #f4f5ff;
       color: #333;
-      line-height: 1.6;
     }
-
     .navbar {
       background: #2d2e52;
-      padding: 25px 20px 10px;
+      padding: 20px;
       text-align: center;
     }
-
     .logo {
-      font-size: 34px;
+      font-size: 30px;
       font-weight: 700;
       color: #fff;
-      margin-bottom: 15px;
-      display: block;
       text-decoration: none;
+      display: block;
+      margin-bottom: 10px;
     }
-
     .nav-links {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
-      margin-bottom: 10px;
     }
-
     .nav-links a {
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
       padding: 8px 14px;
-      border-radius: 5px;
-      transition: background 0.3s;
+      border-radius: 6px;
+      transition: 0.3s;
     }
-
     .nav-links a:hover {
       background: #ffde59;
-      color: #2d2e52;
+      color: #000;
     }
-
     .hero {
       text-align: center;
       padding: 50px 20px;
       background: linear-gradient(to right, #ffe57f, #ffc107);
     }
-
     .hero h1 {
       font-size: 32px;
       margin-bottom: 15px;
     }
-
     .hero p {
       font-size: 18px;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
-
     .join-btn {
       background: #2d2e52;
       color: #fff;
@@ -84,15 +92,13 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      transition: 0.3s ease;
+      transition: 0.3s;
       display: inline-block;
     }
-
     .join-btn:hover {
       background: #1a1a3a;
       transform: scale(1.05);
     }
-
     .features {
       display: flex;
       justify-content: center;
@@ -100,65 +106,36 @@
       gap: 20px;
       padding: 40px 20px;
     }
-
     .card {
       background: #fff;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       width: 280px;
       text-align: center;
-      transition: 0.3s;
     }
-
-    .card:hover {
-      transform: translateY(-10px);
-    }
-
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 15px 10px;
+      padding: 20px;
       text-align: center;
-      font-size: 14px;
     }
-
     .footer-links {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
-
     .footer-links a {
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
     }
-
     .footer-links a:hover {
       color: #ffde59;
     }
-
-    @media (max-width: 768px) {
-      .nav-links {
-        gap: 10px;
-      }
-
-      .hero h1 {
-        font-size: 24px;
-      }
-
-      .features {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .footer-links {
-        gap: 10px;
-      }
+    @media(max-width: 768px){
+      .features { flex-direction: column; }
     }
   </style>
 </head>
@@ -177,9 +154,10 @@
   </nav>
 
   <section class="hero">
-    <h1>Welcome to JokerLudo Group! 🎉</h1>
-    <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a> <br><br>
+    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group Now</a>
+    <br/><br/>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
   </section>
 
@@ -189,31 +167,28 @@
       <p>Hamesha aapke sath – turant response.</p>
     </div>
     <div class="card">
-      <h3>✅ Quick Withdrawals</h3>
+      <h3>✅ Instant Withdrawals</h3>
       <p>Har jeet par instant paisa.</p>
     </div>
     <div class="card">
-      <h3>✅ Trusted Group</h3>
+      <h3>✅ Trusted Platform</h3>
       <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
 
   <section class="features">
-    <h2 style="text-align:center; width:100%; margin-bottom:20px;">🔥 Approved Ludo WhatsApp Groups</h2>
-
+    <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
     <div class="card">
-      <h3>🔥 LudoStar Group</h3>
+      <h3>🔥 LudoStar</h3>
       <p>Join now & win real cash!</p>
       <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn">Join Group</a>
     </div>
-
     <div class="card">
       <h3>🔥 FastWin Ludo</h3>
-      <p>Guaranteed fast payments!</p>
+      <p>Quick deposits & payouts</p>
       <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
     </div>
-
-    <!-- Add more group cards as needed -->
+    <!-- Add more groups as needed -->
   </section>
 
   <footer>
